# open311-introspector

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
script/: docker_entrypoint.sh  introspector.sh
src/introspector/: cli.py
src/introspector/backends/: __init__.py  confirm.py
src/introspector/generators/: confirm.py
src/templates/confirm/: council-{{ council }}_confirm.yml
tests/: test_introspector.py
