[tool.poetry]
name = "introspector"
version = "0.1.0"
description = ""
authors = ["Dave Arter <davea@mysociety.org>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.28.1"
"ruamel.yaml" = "^0.17.21"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.10.0"
ipython = "^8.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
introspector = "introspector.cli:main"
